--- a/config/boards/arm/adv360/adv360_left_defconfig
+++ b/config/boards/arm/adv360/adv360_left_defconfig
@@ -59,3 +59,7 @@ CONFIG_USB_DEVICE_MANUFACTURER="Kinesis Corporation"
 CONFIG_BT_DIS_MANUF="Kinesis Corporation"
 
 CONFIG_BUILD_OUTPUT_UF2=y
+CONFIG_BT_PERIPHERAL_PREF_TIMEOUT=600
+CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=24
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=30
